Made menu options inline with logo header

--- a/home.html
+++ b/home.html
@@ -38,8 +38,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <div id="page-logo">
       <a href="https://chareditor.com"><img class="center" src="images/logo.png"></a>
     </div>
-
-    <div id="page-options">Home Contribute About Creations</div> 
+    <br>
+    <div id="page-options">
+      <a href="https://chareditor.com">Home</a>
+      <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md">Contribute</a>
+      <a href="">About</a>
+      <a href="">Creations</a>
+    </div>
   </header>
 
   <div id="page-description">
