Made new CSS files

--- a/home.html
+++ b/home.html
@@ -3,36 +3,34 @@
 {{ Chareditor.com }}
 Copyright (C) {{ 2020 }}  {{ alestiago }}
 
-This program is free software: you can redistribute it and/or modify
+chareditor.com is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
-This program is distributed in the hope that it will be useful,
+chareditor.com is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>. 
+along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
 -->
-
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
-  
   <title>Character Editor</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
-  
   <!-- CSS imports -->
-  <link href="styles/home-page__style.css" rel="stylesheet" type="text/css" />
-  
+  <link href="styles/page-home.css" rel="stylesheet" type="text/css" />
+  <link href="styles/header.css" rel="stylesheet" type="text/css" />
+  <link href="styles/footer.css" rel="stylesheet" type="text/css" />
+  <link href="styles/alignment.css" rel="stylesheet" type="text/css" />
+  <link href="styles/background.css" rel="stylesheet" type="text/css" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:600&display=swap" rel="stylesheet"> 
-
 </head>
-
 <body>
   <header>
     <div id="page-logo">
@@ -41,7 +39,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <br>
     <div id="page-options">
       <a href="https://chareditor.com">Home</a>
-      <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md">Contribute</a>
+      <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a>
       <a href="">About</a>
       <a href="">Creations</a>
     </div>
@@ -57,7 +55,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   </div>
   
   <footer>
-    <a id="copyright-text" href="https://github.com/alestiago" target="blank">&copy; Open Source Web Tool by alestiago</a>
+    <a id="copyright-text" class="bottom" href="https://github.com/alestiago" target="_blank">&copy; Open Source Web Tool by alestiago</a>
   </footer>
 </body>
 </html>
