Added contribute, about and creations pages

--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@ along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:600&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
   <header>
     <div id="page-logo">
@@ -39,9 +40,9 @@ along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
     <br>
     <div id="page-options">
       <a href="https://chareditor.com">Home</a>
-      <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a>
-      <a href="">About</a>
-      <a href="">Creations</a>
+      <a href="pages/contribute.html" target="_self">Contribute</a>
+      <a href="pages/about.html">About</a>
+      <a href="pages/creations.html">Creations</a>
     </div>
   </header>
 
@@ -51,7 +52,7 @@ along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
       Easily edit, filter and visualize your characters for your LCD display. Includes<br>
       self generating code, unlimeted use and no extensions needed.
     </div>
-    <a href="index.html"><input id="page-description__button" type="button" value="Make your character now"></a>
+    <a href="editor.html"><input id="page-description__button" type="button" value="Make your character now"></a>
   </div>
   
   <footer>
