Added logo in navigation bar

--- a/editor.html
+++ b/editor.html
@@ -36,6 +36,7 @@ Refer to index.html for full license. -->
   </div>
   
   <div id="option-navigation-bar">
+    <a href="https://chareditor.com" target="_blank"><img id="option-navigation-bar__logo" src="images/logo.png" class="option-navigation-bar__child"></a>
   </div>
   
   <div id="editor-options-box">
