Made a single CSS file for each page

--- a/pages/creations.html
+++ b/pages/creations.html
@@ -9,11 +9,7 @@ Refer to index.html for full license. -->
   <title>Character Editor</title>
   <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico"/>
   <!-- CSS imports -->
-  <link href="../styles/pages-body.css" rel="stylesheet" type="text/css" />
-  <link href="../styles/header.css" rel="stylesheet" type="text/css" />
-  <link href="../styles/footer.css" rel="stylesheet" type="text/css" />
-  <link href="../styles/alignment.css" rel="stylesheet" type="text/css" />
-  <link href="../styles/background.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/creations.css" rel="stylesheet" type="text/css" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:600&display=swap" rel="stylesheet"> 
 </head>
