--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@ along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
   <title>Character Editor</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <!-- CSS imports -->
-  <link href="styles/page-home.css" rel="stylesheet" type="text/css" />
-  <link href="styles/header.css" rel="stylesheet" type="text/css" />
-  <link href="styles/footer.css" rel="stylesheet" type="text/css" />
-  <link href="styles/alignment.css" rel="stylesheet" type="text/css" />
-  <link href="styles/background.css" rel="stylesheet" type="text/css" />
+  <link href="styles/home.css" rel="stylesheet" type="text/css" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:600&display=swap" rel="stylesheet"> 
 </head>
