--- a/editor.html
+++ b/editor.html
@@ -17,15 +17,13 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 -->
 
-
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Online design editor to easily create LCD custom characters with self generating code.">
   <title>LCD Custom Character Editor</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
-  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <link href="styles/editor.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="updateCode();">
