Changed copyright noticed to chareditor

--- a/pages/creations.html
+++ b/pages/creations.html
@@ -40,7 +40,7 @@ Refer to index.html for full license. -->
   </div>
   
   <footer>
-    <a id="copyright-text" class="bottom" href="https://github.com/alestiago" target="_blank">&copy; Open Source Web Tool by alestiago</a>
+    <a id="copyright-text" class="bottom" href="https://github.com/alestiago/chareditor" target="_blank">&copy; Chareditor - Open Source Web Tool</a>
   </footer>
 </body>
 </html>
