--- a/editor.html
+++ b/editor.html
@@ -456,7 +456,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
    </div>
 	
   <footer>
-  <a id="copyright-text" href="https://github.com/alestiago" target="_blank">&copy; Open Source Web Tool by alestiago</a>
+  <a id="copyright-text" href="https://github.com/alestiago/chareditor" target="_blank">&copy; Chareditor - Open Source Web Tool</a>
   </footer>
   
   <!-- Scripts -->
