--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -32,16 +32,7 @@ Refer to index.html for full license. -->
     <div id="page-description__title">Contributing</div> <br>
     <div id="page-description__subtitle">
       You can contribute with this project in many different ways. Contributing can be suggesting ideas, <br>
-      writing some code, designing images or even supporting.
-      <p>
-      Chareditor currently runs with <b>no ads</b> and all funds come from supporters of this project. If you like <br>
-      this project and would like to <b>keep it running</b> and up to date with new features consider <b>supporting</b>: <br>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="KAEHS42K3TPDA">
-        <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
-        <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-      </form>
+      writing some code, designing images, etc.
       <p>
       If you would like to know more on how to contribute with code, ideas or images click 
       <a href="https://github.com/alestiago/chareditor/blob/master/CONTRIBUTING.md" target="_blank">here</a>.
