Changed appearance of the status message

--- a/editor.html
+++ b/editor.html
@@ -65,6 +65,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   <div id="pixel-editor">
     <input type="text-area" id="pixel-editor__charname" value="charName" oninput="updateCode();" data-saveable/> <br>
 
+    <div id="status-msg-box" class="horizontal-center"></div>
+
     <div id="pixels" data-saveable>
       <div id="pixel-0x0" class="pixel-off" onclick="togglePixel(this)"> </div>
       <div id="pixel-0x1" class="pixel-off" onclick="togglePixel(this)"> </div>
