Added copy to clipboard small icon

--- a/editor.html
+++ b/editor.html
@@ -451,6 +451,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
    </div>
   
   <div id="code-box">
+    <img id="copy-to-clipboard-icon"  src="images/editor-icons/copy-to-clipboard-icon.png" title="Copy to clipboard" onclick="copyToClipboard();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
     <div class="box-title">Code</div>
     <textarea id="code-box__code" readonly></textarea>
    </div>
