Changed title of horizontal mirror icon

--- a/editor.html
+++ b/editor.html
@@ -44,7 +44,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       <img id="clear-icon"  src="images/editor-icons/clear-icon.png" title="Clear" onclick="clearPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="invert-icon" src="images/editor-icons/invert-icon.png" title="Invert (Ctrl+I)" onclick="invertPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="mirror-vertical-icon" src="images/editor-icons/mirror-vertical-icon.png" title="Mirror Vertical (Ctrl+M)" onclick="mirrorVertPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
-      <img id="mirror-horizontal-icon" src="images/editor-icons/mirror-horizontal-icon.png" title="Mirror Horizontal (Ctrl+N)" onclick="mirrorHoriPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
+      <img id="mirror-horizontal-icon" src="images/editor-icons/mirror-horizontal-icon.png" title="Mirror Horizontal (Ctrl+K)" onclick="mirrorHoriPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="copy-icon" src="images/editor-icons/copy-icon.png" title="Copy (Ctrl+C)" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="paste-icon" src="images/editor-icons/paste-icon.png" title="Paste (Ctrl+V)" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="shift-icon" src="images/editor-icons/shift-icon.png" width="40" height="40" usemap="#shiftmap">
