Added single line option

--- a/editor.html
+++ b/editor.html
@@ -60,7 +60,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div class="options-bar__title">Code Options</div>
         <input id="autocopy" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Automatic copy <br>
         <input id="include-define" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Include #define <br>
-        <input id="hex-data-type" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Hex datatype
+        <input id="hex-data-type" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Hex datatype <br>
+        <input id="single-line-code" class="code-option-box__checkbox" type="checkbox" onclick="updateCode();">Single line code
     </div>
   </div>
   <div id="pixel-editor">
