Added cut option

--- a/editor.html
+++ b/editor.html
@@ -47,6 +47,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       <img id="mirror-horizontal-icon" src="images/editor-icons/mirror-horizontal-icon.png" title="Mirror Horizontal (Ctrl+K)" onclick="mirrorHoriPixels();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="copy-icon" src="images/editor-icons/copy-icon.png" title="Copy (Ctrl+C)" onclick="copyToPixelClipboard();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="paste-icon" src="images/editor-icons/paste-icon.png" title="Paste (Ctrl+V)" onclick="pasteToPixelEditor();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
+      <img id="cut-icon" src="images/editor-icons/cut-icon.png" title="Cut (Ctrl+X)" onclick="cutPixelEditor();" onmouseover="iconHovered(this);" onmouseout="iconUnHovered(this);">
       <img id="shift-icon" src="images/editor-icons/shift-icon.png" width="40" height="40" usemap="#shiftmap">
       <map name="shiftmap">
         <area id="shift-icon-up" shape="rect" coords="11, 0, 29, 11" onclick="shiftUp();" title="Shift upwards (Ctrl+Up)" onmouseover="iconHovered(this, document.getElementById('shift-icon'));" onmouseout="iconUnHovered(document.getElementById('shift-icon'));">
