Added Editor to page navigation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ along with Chareditor.  If not, see <https://www.gnu.org/licenses/>.
     <br>
     <div id="page-options">
       <a href="https://chareditor.com">Home</a>
-      <a href="pages/contribute.html" target="_self">Contribute</a>
+      <a href="editor.html">Editor</a>
+      <a href="pages/contribute.html">Contribute</a>
       <a href="pages/about.html">About</a>
       <a href="pages/creations.html">Creations</a>
     </div>
