--- a/pages/creations.html
+++ b/pages/creations.html
@@ -23,7 +23,8 @@ Refer to index.html for full license. -->
     <div id="page-options">
     <div id="page-options">
       <a href="https://chareditor.com">Home</a>
-      <a href="contribute.html" target="_self">Contribute</a>
+      <a href="../editor.html">Editor</a>
+      <a href="contribute.html">Contribute</a>
       <a href="about.html">About</a>
       <a href="creations.html">Creations</a>
     </div>
